--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,7 @@
 <header>
   <laputa-brand></laputa-brand>
+  <a routerLink="/analysis" class="analysis">
+    <fa-icon [icon]="['fas', 'chart-pie']"></fa-icon>
+    统计分析
+  </a>
 </header>
