--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -28,6 +28,7 @@ $platform-color-nintendo-switch: #E60012;
 $platform-color-xbox: #107c10;
 $platform-color-steam: #136c9e;
 $platform-color-ios: #136c9e;
+$platform-color-playstation: #23C4F8;
 
 $loading-color-yellow: #F6D87C;
 $loading-color-green: #57CA81;
