Update Logo and Favicon

--- a/src/app/header/brand/brand.component.html
+++ b/src/app/header/brand/brand.component.html
@@ -1,7 +1,6 @@
 <div class="brand">
   <a routerLink="/" title="Laputa">
-    <img src="assets/images/logo.svg" alt="Laputa"/>
-    <span class="name">Laputa</span>
+    <img src="/assets/images/logo-with-name.svg" alt="Laputa"/>
     <sup class="indicator">
       <fa-icon icon="home" size="xs"></fa-icon>
     </sup>
