--- a/src/app/header/brand/brand.component.scss
+++ b/src/app/header/brand/brand.component.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "mixins";
 
 :host {
   display: block;
@@ -13,14 +14,15 @@
 .brand a {
   display: flex;
   align-items: center;
-  padding: 8px 0;
   text-decoration: none;
   color: $light-4;
   transition: .2s ease;
 
   img {
-    max-width: 100%;
-    max-height: 100%;
+    display: block;
+    margin-right: 2px;
+    width: 100px;
+    height: 26px;
   }
 }
 
@@ -42,6 +44,10 @@
 }
 
 .slogan {
+  @include respond-to(mobile) {
+    display: none;
+  }
+
   align-self: center;
   margin-left: 10px;
   font-size: 12px;
