Analysis - Change the order of charts

--- a/src/app/analysis/analysis.component.html
+++ b/src/app/analysis/analysis.component.html
@@ -1,10 +1,11 @@
 <main class="dark-charts" *ngIf="!isLoading else loading">
   <section class="games-group-by-platforms" *ngIf="gamesGroupByPlatforms.length > 0">
-    <h2>游戏平台分布</h2>
+    <h2>数量统计</h2>
     <div class="charts">
       <div class="games-group-by-platforms-all-chart">
         <ngx-charts-number-card
           cardColor="#232837"
+          bandColor="#23C4F8"
           [results]="gamesForChart"></ngx-charts-number-card>
       </div>
       <div class="games-group-by-platforms-chart">
@@ -18,34 +19,13 @@
     </div>
   </section>
 
-  <section class="games-group-by-genres" *ngIf="gamesGroupByGenres.length > 0">
-    <h2>游戏风格分布</h2>
-    <ngx-charts-bar-horizontal
-      [xAxis]="true"
-      [yAxis]="true"
-      [showDataLabel]="true"
-      [roundEdges]="false"
-      [results]="gamesGroupByGenres"></ngx-charts-bar-horizontal>
-  </section>
-
-  <section class="games-completed">
-    <h2>通关比例</h2>
-    <div class="charts">
-      <div class="games-completed-chart"  *ngIf="gamesGroupByCompleted.length > 0">
-        <ngx-charts-advanced-pie-chart [results]="gamesGroupByCompleted"></ngx-charts-advanced-pie-chart>
-      </div>
-      <div class="games-completed-platforms-chart" *ngIf="gamesGroupByCompletedAndPlatforms.length > 0">
-        <ngx-charts-pie-grid [results]="gamesGroupByCompletedAndPlatforms"></ngx-charts-pie-grid>
-      </div>
-    </div>
-  </section>
-
   <section class="games-prices">
     <h2>花费统计</h2>
     <div class="charts">
       <div class="games-prices-all-chart" *ngIf="prices.length > 0">
         <ngx-charts-number-card
           cardColor="#232837"
+          bandColor="#F6D87C"
           [results]="prices"></ngx-charts-number-card>
       </div>
       <div class="games-prices-chart" *ngIf="priceGroupByPlatforms.length > 0">
@@ -57,6 +37,28 @@
           [results]="priceGroupByPlatforms"></ngx-charts-bar-vertical>
       </div>
     </div>
+  </section>
+
+  <section class="games-completed">
+    <h2>通关统计</h2>
+    <div class="charts">
+      <div class="games-completed-chart"  *ngIf="gamesGroupByCompleted.length > 0">
+        <ngx-charts-advanced-pie-chart [results]="gamesGroupByCompleted"></ngx-charts-advanced-pie-chart>
+      </div>
+      <div class="games-completed-platforms-chart" *ngIf="gamesGroupByCompletedAndPlatforms.length > 0">
+        <ngx-charts-pie-grid [results]="gamesGroupByCompletedAndPlatforms"></ngx-charts-pie-grid>
+      </div>
+    </div>
+  </section>
+
+  <section class="games-group-by-genres" *ngIf="gamesGroupByGenres.length > 0">
+    <h2>风格分布</h2>
+    <ngx-charts-bar-horizontal
+      [xAxis]="true"
+      [yAxis]="true"
+      [showDataLabel]="true"
+      [roundEdges]="false"
+      [results]="gamesGroupByGenres"></ngx-charts-bar-horizontal>
   </section>
 </main>
 
