--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,7 +4,7 @@ $BREAKPOINTS: (
   tablet: 768px 991px,
   desktop: 992px,
   desktop-md: 1200px
-) !global;
+);
 
 $dark-0: #000000;
 $dark-1: #121621;
