--- a/src/app/shared/game-tile/game-tile.component.scss
+++ b/src/app/shared/game-tile/game-tile.component.scss
@@ -10,10 +10,10 @@
   display: block;
   overflow: hidden;
   height: 100%;
-  padding: 0 20px 20px;
+  padding: 0 10px 15px;
   background: $dark-0;
   border: 1px solid transparent;
-  border-radius: 4px;
+  border-radius: 6px;
   color: $light-2;
 
   &:hover{
@@ -56,7 +56,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 10px;
+  padding: 5px 20px;
   width: 100%;
 }
 
@@ -65,17 +65,24 @@
 }
 
 .completed {
+  display: flex;
+  align-items: center;
   position: absolute;
   top: 5px;
-  right: 5px;
+  right: 15px;
   padding: 2px 5px;
   background: rgba(0,0,0, .5);
   border-radius: 4px;
   color: $loading-color-green;
+  font-size: 11px;
+}
+
+.completed-label {
+  margin-left: 3px;
 }
 
 .extra-information {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .name {
@@ -88,7 +95,7 @@
 }
 
 .flags {
-  margin-top: 15px;
+  margin-top: 2px;
 }
 
 .chinese,
@@ -100,7 +107,7 @@
   border: 1px solid;
   border-radius: 2px;
   line-height: 1;
-  font-size: 12px;
+  font-size: 10px;
   opacity: .6;
 }
 
