--- a/src/app/analysis/analysis.component.html
+++ b/src/app/analysis/analysis.component.html
@@ -13,7 +13,7 @@
           [xAxis]="true"
           [yAxis]="true"
           [showDataLabel]="true"
-          [roundEdges]="false"
+          [roundEdges]="true"
           [results]="gamesGroupByPlatforms"></ngx-charts-bar-vertical>
       </div>
     </div>
@@ -33,7 +33,7 @@
           [xAxis]="true"
           [yAxis]="true"
           [showDataLabel]="true"
-          [roundEdges]="false"
+          [roundEdges]="true"
           [results]="priceGroupByPlatforms"></ngx-charts-bar-vertical>
       </div>
     </div>
@@ -57,7 +57,7 @@
       [xAxis]="true"
       [yAxis]="true"
       [showDataLabel]="true"
-      [roundEdges]="false"
+      [roundEdges]="true"
       [results]="gamesGroupByGenres"></ngx-charts-bar-horizontal>
   </section>
 </main>
