--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,6 +20,7 @@ $light-5: #FFFFFF;
 
 $primary: #23C4F8;
 $secondary: #8C6FF0;
+$active: #F6D87C;
 
 $body-text: $light-3;
 $body-bg-color: $dark-2;
