--- a/src/app/shared/game-platform/game-platform.component.html
+++ b/src/app/shared/game-platform/game-platform.component.html
@@ -1,4 +1,4 @@
 <span class="platform" [ngClass]="getClassName()" [title]="name" >
-  <laputa-game-platform-icon [platformName]="name" [iconSize]="'lg'"></laputa-game-platform-icon>
+  <laputa-game-platform-icon [platformName]="name" [iconSize]="iconSize"></laputa-game-platform-icon>
 </span>
 
